<resources>
    <string name="app_name" translatable="false">Sua Cifra</string>
    <string name="no_cifras_message">Welcome to your app to save your Cifras</string>
    <string name="no_sequences_message">Tap on button + bellow right to add a sequence</string>
    <string name="settings_bottom_navigation_string">Options</string>
    <string name="add_bottom_navigation_string">Add</string>
    <string name="home_bottom_navigation_string">Home</string>
    <string name="cifra_name_hint_string">Insert the name of your cifra</string>
    <string name="singer_name_hint_string">Insert the singer of your cifra</string>
    <string name="tone_spinner_helper_string">Select a initial tone above</string>
    <string name="home_content_description">Show lists and home screen</string>
    <string name="settings_content_description">Show features and settings</string>
    <string name="add_content_description">Show screen to add your cifra</string>
    <string name="choose_tone_button_text">Choose Tone</string>
    <string name="a_tone" translatable="false">A</string>
    <string name="bb_tone" translatable="false">Bb</string>
    <string name="b_tone" translatable="false">B</string>
    <string name="c_tone" translatable="false">C</string>
    <string name="db_tone" translatable="false">Db</string>
    <string name="d_tone" translatable="false">D</string>
    <string name="eb_tone" translatable="false">Eb</string>
    <string name="e_tone" translatable="false">E</string>
    <string name="f_tone" translatable="false">F</string>
    <string name="gb_tone" translatable="false">Gb</string>
    <string name="g_tone" translatable="false">G</string>
    <string name="ab_tone" translatable="false">Ab</string>
    <string name="tones_card_view_text">Tones</string>
    <string name="tone_chosen_text">Tone %1$s was chosen!</string>
    <string name="profile_picture_content_description">Profile picture on Settings Screen, shows your profile image</string>
    <string name="profile_username_text">Your name</string>
    <string name="profile_username_text_attempt">Enter your name</string>
    <string name="profile_username_text_edit">Touch on %1$s</string>
    <string name="tuner_button_text">Tuner</string>
    <string name="login_button_text">Access Profile</string>
    <string name="about_button_text">About</string>
    <string name="pro_subscription_in_production_text">Subscription YourCifraPRO is in production</string>
    <string name="change_username_dialog_text">Update your name</string>
    <string name="user_not_logged_in_text">Access with google is needed, in case you want to save your app cifras on cloud, to be saved in any access</string>
    <string name="profile_title_text">Profile</string>
    <string name="hint_for_user_not_logged_in_text">It is worth remembering that it is not mandatory</string>
    <string name="google_sign_in_feature_text">Google sign in feature</string>
    <string name="sign_in_with_google_button_text">Sign In with Google</string>
    <string name="about_title_text">About</string>
    <string name="about_abstract_text">A app for your custom cifras, with easy access to see, edit and delete, in your own way and how you with\nMade for both, those who are not good at memorize chord sequences and those who play in many bands or have many singers who sing same song in your crew</string>
    <string name="go_back_button_text">Go Back</string>
    <string name="about_third_party_software_text">Third Party Software</string>
    <string name="open_activity_error_message">Something went wrong! Try to contact us and send %1$s</string>
    <string name="open_activity_error_message_on_result">Something went wrong! Try again later</string>
    <string name="sign_in_with_google_message_success">You connected! Enjoy it</string>
    <string name="sign_in_with_google_message_fail">It not worked ;-;\nMaybe try again later</string>
    <string name="sign_out_with_google">Sign out from your account</string>
    <string name="user_not_logged_in_warning_text">In case you want to change your google account, for now I would recommend uninstalling and install the app or wipe data from app and try again</string>
    <string name="shared_preference_file_key" translatable="false">br.com.suacifra.PREFERENCE_FILE_KEY</string>
    <string name="shared_preference_sign_in_boolean_key" translatable="false">br.com.suacifra.PREFERENCE_SIGN_IN_BOOLEAN_KEY</string>
    <string name="notes_button_text">Notes</string>
    <string name="notes_title_text">Notes</string>
    <string name="add_notes_content_description_text">Add notes</string>
    <string name="add_note_image_button_content_description_text">Add a note</string>
    <string name="add_note_title_text">Add a note</string>
    <string name="note_body_hint_string">Insert the note body </string>
    <string name="note_title_hint_string">Insert the title of the note</string>
    <string name="note_title_text_view">Note title</string>
    <string name="note_body_text_view">Note body</string>
    <string name="cancel_add_note_image_button_content_description_text">Cancel add note</string>
    <string name="add_cifra_title_text">Add</string>
    <string name="add_note_cancelled">Note cancelled</string>
    <string name="cifra_name_text_view">Cifra\'s name</string>
    <string name="singer_name_text_view">Singer\'s name</string>
    <string name="add_sequence_content_description_text">Add sequence of chords</string>
    <string name="save_cifra_button_text">Save Cifra</string>
    <string name="delete_sequence_content_description">Delete sequence</string>
    <string name="sequence_item_title">Sequence #%1$d</string>
    <string name="delete_sequence_successfully">You deleted sequence #%1$d</string>
    <string name="add_cifra_successfully">You added cifra %1$s successfully</string>
    <string name="add_cifra_missing_data">Please, check your cifra</string>
    <string name="sequence_title_text_view">Sequence of chords</string>
    <string name="sequence_title_hint_string">Insert your chords</string>
    <string name="sequence_helper_string">Put chords between comma \",\" and without spaces\ne.g. C,G,Am,F</string>
    <string name="cancel_add_sequence_image_button_content_description_text">Cancel add sequence</string>
    <string name="add_sequence_image_button_content_description_text">Add a sequence</string>
    <string name="add_sequence_title_text">Add a sequence</string>
    <string name="add_sequence_successfully">Sequence added successfully</string>
    <string name="add_sequence_failed">Add a sequence above</string>
    <string name="add_sequence_cancelled">Sequence cancelled</string>
    <string name="no_notes_message">Tap on button bellow to add a note</string>
    <string name="cifra_singer_name_item">Singer: %1$s</string>
    <string name="cifra_tone_item">Tone: %1$s</string>
    <string name="cifra_first_sequence_item">First sequence: %1$s</string>
    <string name="add_note_successfully">Note %1$s added successfully</string>
    <string name="save_note_missing_data">Please, check your note</string>
    <string name="shared_preference_edit_sequence_mode_boolean_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_SEQUENCE_MODE_BOOLEAN_KEY</string>
    <string name="shared_preference_edit_sequence_mode_sequence_string_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_SEQUENCE_MODE_SEQUENCE_STRING_KEY</string>
    <string name="shared_preference_edit_cifra_mode_boolean_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_CIFRA_MODE_BOOLEAN_KEY</string>
    <string name="shared_preference_edit_cifra_mode_name_string_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_CIFRA_MODE_NAME_STRING_KEY</string>
    <string name="shared_preference_edit_cifra_mode_singer_name_string_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_CIFRA_MODE_SINGER_NAME_STRING_KEY</string>
    <string name="shared_preference_edit_cifra_mode_tone_string_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_CIFRA_MODE_TONE_STRING_KEY</string>
    <string name="shared_preference_edit_cifra_mode_sequence_set_string_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_CIFRA_MODE_SEQUENCE_SET_STRING_KEY</string>
    <string name="shared_preference_edit_notes_mode_boolean_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_NOTES_MODE_BOOLEAN_KEY</string>
    <string name="shared_preference_edit_notes_mode_title_string_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_NOTES_MODE_TITLE_STRING_KEY</string>
    <string name="shared_preference_edit_notes_mode_body_string_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_NOTES_MODE_BODY_STRING_KEY</string>
    <string name="edit_note_successfully">Note %1$s edited successfully</string>
    <string name="edit_cifra_successfully">You edited cifra %1$s successfully</string>
    <string name="edit_sequence_successfully">Sequence edited successfully</string>
    <string name="shared_preference_edit_sequence_mode_sequence_index_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_SEQUENCE_MODE_SEQUENCE_INDEX_KEY</string>
    <string name="delete_cifra_content_description">Delete cifra</string>
    <string name="delete_note_content_description">Delete note</string>
    <string name="save_note_title_missing_data">Please, check your note title</string>
    <string name="save_note_body_missing_data">Please, check your note body</string>
    <string name="sqlite_database_name" translatable="false">suaCifraDatabase.db</string>
    <string name="delete_note_successfully">Note %1$s was deleted</string>
    <string name="delete_note_failed">Delete note failed</string>
    <string name="save_cifra_missing_data">" Please, check your cifra"</string>
    <string name="shared_preference_add_cifra_mode_name_edit_text_key" translatable="false">br.com.suacifra.PREFERENCE_ADD_CIFRA_MODE_NAME_EDIT_TEXT_KEY</string>
    <string name="shared_preference_add_cifra_mode_singer_name_edit_text_key" translatable="false">br.com.suacifra.PREFERENCE_ADD_CIFRA_MODE_SINGER_NAME_EDIT_TEXT_KEY</string>
    <string name="delete_cifra_successfully">Cifra %1$s was deleted</string>
    <string name="delete_cifra_failed">Delete cifra failed</string>
    <string name="shared_preference_edit_notes_mode_id_int_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_NOTES_NOME_ID_INT_KEY</string>
    <string name="delete_note_button_text">Delete note</string>
    <string name="save_note_button_text">Save note</string>
    <string name="delete_cifra_button_text">Delete cifra</string>
    <string name="shared_preference_edit_cifra_mode_id_int_key" translatable="false">br.com.suacifra.PREFERENCE_EDIT_CIFRA_MODE_ID_INT_KEY</string>
    <string name="save_cifra_missing_tone">Please, check your tone</string>
    <string name="save_cifra_missing_sequence">Please, check your sequence</string>
    <string name="save_sequence_button_text">Save sequence</string>
    <string name="delete_sequence_button_text">Delete Sequence</string>
    <string name="save_sequence_missing_data">Please, check your sequence</string>
</resources>