<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.add.AddFragment">

        <TextView
            android:id="@+id/addCifraTitleTextView"
            style="@style/settingsTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_space"
            android:text="@string/add_cifra_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cifraNameTextView"
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            android:text="@string/cifra_name_text_view"
            app:layout_constraintBottom_toTopOf="@id/cifraNameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addCifraTitleTextView" />

        <EditText
            android:id="@+id/cifraNameEditText"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/cifra_name_hint_string"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cifraNameTextView" />

        <TextView
            android:id="@+id/singerNameTextView"
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            android:text="@string/singer_name_text_view"
            app:layout_constraintBottom_toTopOf="@id/cifraSingerNameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cifraNameEditText" />

        <EditText
            android:id="@+id/cifraSingerNameEditText"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/singer_name_hint_string"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singerNameTextView" />

        <Button
            android:id="@+id/chooseToneButton"
            style="@style/defaultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choose_tone_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cifraSingerNameEditText" />

        <TextView
            android:id="@+id/songToneButtonHelper"
            style="@style/helperTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tone_spinner_helper_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseToneButton" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sequenceRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/big_space"
            android:layout_marginTop="@dimen/minimal_space"
            android:layout_marginEnd="@dimen/big_space"
            android:layout_marginBottom="@dimen/minimal_space"
            app:layout_constraintBottom_toTopOf="@id/saveCifraButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/songToneButtonHelper" />

        <TextView
            android:id="@+id/noSequenceMessage"
            style="@style/noSequenceWarningMessageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_space"
            android:paddingStart="@dimen/big_space"
            android:paddingEnd="@dimen/big_space"
            android:text="@string/no_sequences_message"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/addSequencesImageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/songToneButtonHelper" />

        <ImageButton
            android:id="@+id/addSequencesImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/minimal_space"
            android:layout_marginBottom="@dimen/minimal_space"
            android:background="@drawable/custom_icon_button"
            android:contentDescription="@string/add_sequence_content_description_text"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toTopOf="@id/saveCifraButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="?attr/colorPrimary" />

        <Button
            android:id="@+id/saveCifraButton"
            style="@style/defaultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/minimal_space"
            android:text="@string/save_cifra_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/chooseToneCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="@dimen/low_space"
            app:cardElevation="@dimen/large_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/aToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_tone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bbToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bb_tone"
                    app:layout_constraintStart_toEndOf="@+id/aToneTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_tone"
                    app:layout_constraintStart_toEndOf="@+id/bbToneTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_tone"
                    app:layout_constraintStart_toEndOf="@+id/bToneTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dbToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/db_tone"
                    app:layout_constraintStart_toEndOf="@+id/cToneTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d_tone"
                    app:layout_constraintStart_toEndOf="@+id/dbToneTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ebToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eb_tone"
                    app:layout_constraintEnd_toStartOf="@id/eToneTextView"
                    app:layout_constraintTop_toBottomOf="@id/aToneTextView" />

                <TextView
                    android:id="@+id/eToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e_tone"
                    app:layout_constraintEnd_toStartOf="@id/fToneTextView"
                    app:layout_constraintTop_toBottomOf="@id/aToneTextView" />

                <TextView
                    android:id="@+id/fToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f_tone"
                    app:layout_constraintEnd_toStartOf="@id/gbToneTextView"
                    app:layout_constraintTop_toBottomOf="@id/aToneTextView" />

                <TextView
                    android:id="@+id/gbToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gb_tone"
                    app:layout_constraintEnd_toStartOf="@id/gToneTextView"
                    app:layout_constraintTop_toBottomOf="@id/aToneTextView" />

                <TextView
                    android:id="@+id/gToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_tone"
                    app:layout_constraintEnd_toStartOf="@id/abToneTextView"
                    app:layout_constraintTop_toBottomOf="@id/aToneTextView" />

                <TextView
                    android:id="@+id/abToneTextView"
                    style="@style/chooseToneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ab_tone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/aToneTextView" />

                <TextView
                    android:id="@+id/toneTitleCardViewText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium_space"
                    android:text="@string/tones_card_view_text"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/choose_tone_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ebToneTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>