<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screens.settings.SettingsFragment">

        <FrameLayout
            android:id="@+id/settingsFrameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

        <Button
            android:id="@+id/notesButton"
            style="@style/buttonOnSettingsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/minimal_space"
            android:elevation="@dimen/very_large_space"
            android:text="@string/notes_button_text" />

        <Button
            android:id="@+id/tunerButton"
            style="@style/buttonOnSettingsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/minimal_space"
            android:elevation="@dimen/very_large_space"
            android:text="@string/tuner_button_text" />


        <Button
            android:id="@+id/loginButton"
            style="@style/buttonOnSettingsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/minimal_space"
            android:elevation="@dimen/very_large_space"
            android:text="@string/login_button_text" />

        <Button
            android:id="@+id/aboutButton"
            style="@style/buttonOnSettingsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/minimal_space"
            android:elevation="@dimen/very_large_space"
            android:text="@string/about_button_text" />

        <TextView
            android:id="@+id/warningProTextView"
            style="@style/warningMessageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/pro_subscription_in_production_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</layout>